--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-select": "^3.0.8",
     "styled-components": "^4.4.0"
   },
+  "engines": {
+    "node": "12.4.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
