--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-server": "node index.js",
-    "heroku-postbuild": "yarn && yarn run build"
+    "heroku-postbuild": "npm && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
