--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-server": "node index.js",
-    "heroku-postbuild": "npm i && npm run build"
+    "heroku-postbuild": "npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:4568",
   "browserslist": {
     "production": [
       ">0.2%",
