--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:4568",
   "browserslist": {
     "production": [
       ">0.2%",
