--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fonts-prework",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
@@ -13,40 +13,17 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
-    "morgan-body": "^2.4.8",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-google-login": "^5.0.5",
-    "react-helmet": "^5.2.1",
-    "react-scripts": "3.2.0",
-    "react-select": "^3.0.8",
-    "styled-components": "^4.4.0"
+    "morgan-body": "^2.4.8"
   },
   "engines": {
     "node": "12.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start-server": "node index.js",
-    "heroku-postbuild": "npm install && npm install --only=dev --no-shrinkwrap && npm run build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "proxy": "http://localhost:4568",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "client": "cd client && npm start",
+    "server": "nodemon index.js",
+    "build": "cd client && npm run build",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   }
 }
